--- a/manifest.json
+++ b/manifest.json
@@ -4,21 +4,28 @@
     "version": "1.0",
     "description": "SAP Uberbot for Google Extension",
     "icons": {
-        "16": "icons/icon16.png",
-        "32": "icons/icon32.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
+        "16": "icons/16-enabled.png",
+        "32": "icons/32-enabled.png",
+        "48": "icons/48-enabled.png",
+        "128": "icons/128-enabled.png"
     },
     "author": "Caizhong Liu",
     "background": {
         "persistent": false,
         "scripts": ["background.js"]
     },
-    "content_scripts": [
-        {
-            "matches": ["https://*.sap.corp/*"],
-            "run_at": "document_start",
-            "js": ["Hello.js"]
-        }
-    ]
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "run_at": "document_start",
+        "js": ["contentScript.js"]
+    }],
+    "browser_action": {
+        "default_icon": {
+            "16": "icons/16-disabled.png",
+            "32": "icons/32-disabled.png",
+            "48": "icons/48-disabled.png",
+            "128": "icons/128-disabled.png"
+        },
+        "default_popup": "popups/disabled.html"
+    }
 }
