--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "run_at": "document_start",
-        "js": ["contentScript.js"]
+        "js": ["contentScript.js"],
+        "css": ["contentScript.css"]
     }],
     "browser_action": {
         "default_icon": {
